# larsql

./: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES_PLAN.md  AIRFLOW_GAP_ANALYSIS.md  ASK_OPERATOR_README.md  ATTACH_AND_CACHING_STRATEGY.md  ATTACH_DISCOVERY_PLAN.md  ATTACH_DISCOVERY_WORKING.md  ATTACH_SESSION_DISCOVERY.md  ATTACH_VIEW_LIFECYCLE.md  AUDIBLE_PLAN.md  AUTOMATIC_ECHO_LOGGING.md  BUG_FIXES_empty_messages_and_cascade_status.md  BUG_FIXES_run_code_and_api_errors.md  BUG_FIX_MESSAGE_POLLUTION.md  CALLER_ID_FIX_SUMMARY.md  CALLER_ID_PROPAGATION_ANALYSIS.md  CALLER_TRACKING_COMPLETE.md  CALLER_TRACKING_DECISIONS.md  CALLER_TRACKING_DESIGN.md  CALLER_TRACKING_ECHO_LOOKUP.md  CALLER_TRACKING_FINAL.md  CALLER_TRACKING_GLOBAL_COMPLETE.md  CASCADES_ALL_THE_WAY_DOWN_COMPLETE.md  CASCADE_SOUNDINGS_BUG_ANALYSIS.md  CASCADE_SOUNDINGS_COMPLETE.md  CHDB_MIGRATION_PLAN.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLICKHOUSE_MIGRATION_PLAN.md  CLICKHOUSE_PERFORMANCE.md  CLICKHOUSE_SETUP.md  CLI_UPDATE_SQL_SERVER.md  COMPLETE_CASCADE_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_POSTGRES_IMPLEMENTATION.md  COMPLETE_SESSION_ACHIEVEMENTS.md  COMPLETE_SQL_SYSTEM_SUMMARY.md  CONDENSE_OPERATOR_README.md  (+296 more)
lars/: .gitignore  AUTOMATIC_CONFIDENCE_SCORING.md  COMPETITIVE_ANALYSIS_SEMANTIC_SQL.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIDENCE_SCORING_FIXED.md  COST_HANDLING_FIXED.md  FINAL_COMPETITIVE_SUMMARY.md  MIGRATION_GUIDE.md  OPTIMIZATION.md  POSTGRESML_VS_RVBBIT.md  README.md  READY_TO_SHIP.md  RUNNER_TRAINING_PATCH.md  RVBBIT_SEMANTIC_SQL.md  RVBBIT_SEMANTIC_SQL_OLD.md  SEMANTIC_OPERATOR_LOGGING_IMPLEMENTATION.md  SEMANTIC_SQL_DOC_CHANGELOG.md  SESSION_COMPLETE_SUMMARY.md  SYSTEM_CONFIRMED_WORKING.md  SYSTEM_FULLY_OPERATIONAL.md  TESTING.md  TESTING_QUICK_REFERENCE.md  TRAINING_QUICK_REFERENCE.md  TRAINING_SYSTEM_IMPLEMENTATION_SUMMARY.md  TRAINING_SYSTEM_QUICKSTART.md  TRAINING_SYSTEM_READY.md  TRAINING_UI_COMPLETE.md  TRAINING_UI_WITH_DETAIL_PANEL.md  TRAINING_VIA_SQL_DESIGN.md  UNIVERSAL_TRAINING_SYSTEM.md  pyproject.toml
lars/cascades/: alert.yaml
lars/docs/: UI_MOCKUP_OPTIMIZATION.md  UNIFIED_OPERATOR_MIGRATION_PLAN.md  bridge-design.md  context-assessment-ui-plan.md  durable-execution-plan.md  harbor-design.md  sextant-design.md
lars/examples/: browser_actions_demo.yaml  image_aspect_ratio_fix.yaml  image_batch_analysis.yaml  image_repaint_single.yaml  image_to_llm_basic.yaml  local_model_demo.yaml  local_model_deterministic.yaml
lars/lars/: ECHO_INTEGRATION.md  __init__.py  agent.py  alice_generator.py  analytics_worker.py  analyzer.py  artifact_resolver.py  auto_context.py  azure_cost.py  browser_manager.py  caller_context.py  cascade.py  checkpoints.py  cli.py  confidence_worker.py  config.py  console_style.py  content_classifier.py  context_cards.py  cost.py  credits.py  db_adapter.py  demo_tools.py  deterministic.py  echo.py  echo_integration_example.py  elastic.py  embedding_worker.py  ephemeral_rag.py  event_hooks.py  extraction.py  generative_ui.py  harbor.py  harbor_mgmt.py  hotornot.py  human_ui.py  loaders.py  logs.py  mcp_cli.py  mcp_client.py  (+37 more)
lars/migrations/: README.md  add_budget_tracking_columns.sql  add_candidate_model_to_context_breakdown.sql  add_checkpoint_summary.sql  add_context_attribution_columns.sql  add_context_relevance_analysis.sql  add_data_shape_columns.sql  add_genus_hash_columns.sql  add_output_column_to_cascade_sessions.sql  add_prompt_lineage_table.sql  add_reasoning_columns.sql  add_source_lineage_columns.sql  add_toon_telemetry_columns.sql  add_video_columns.sql  add_visual_regression_columns.sql  backfill_content_type.sql  create_artifacts_table.sql  create_cascade_sessions_table.sql  create_cascade_state_table.sql  create_cell_context_breakdown_table.sql  create_context_shadow_assessments_table.sql  create_cost_aggregation_mv.sql  create_intra_context_shadow_assessments_table.sql  create_lars_embeddings_table.sql  create_research_sessions_table.sql  create_sql_cascade_executions.sql  create_sql_trail_tables.sql  create_universal_training_system.sql  create_watches_tables.sql
lars/scripts/: backfill_tool_calls.py
lars/tests/: README_SEMANTIC_SQL_TESTS.md  test_browser_integration.py  test_cascade.json  test_cascade_models.py  test_deterministic.py  test_dimension_rewriter.py  test_echo.py  test_flow.py  test_parallel_semantic_sql.py  test_prompts.py  test_rag.py  test_semantic_sql_negation_generic.py  test_semantic_sql_python_only_calls.py  test_semantic_sql_rewriter_v2_parity.py  test_semantic_sql_rewrites_dynamic.py  test_sentiment_semantic_sql.py  test_session_state.py  test_signals.py  test_skill_namespace_rewriter.py  test_skills.py  test_snapshots.py  test_sql_features.py  test_sql_inspector.py  test_sql_integration.py  test_sql_rewriter.py  test_toon_integration.py  test_triggers.py
windlass/: .gitignore  TESTING.md  pyproject.toml
windlass/docs/: durable-execution-plan.md  harbor-design.md
windlass/examples/: api_response_flow.json  blog_post_quality_flow.json  browser_demo.json  browser_search_demo.json  cascade_soundings_test.json  custom_hitl.py  hitl_flow.json  keyword_retry_test.json  manifest_complex_flow.json  narrator_continuity_demo.json  narrator_demo.json  reforge_cascade_strategy.json  reforge_dashboard_metrics.json  reforge_feedback_chart.json  reforge_meta_optimizer.json  run_meta.py  run_template.py  simple_flow.json  simple_yaml_test.yaml  soundings_code_flow.json  soundings_flow.json  story_writer_flow.json  test_prompt_tools.json  validation_retry_test.json  voice_assistant_demo.json  voice_conversation_demo.json  voice_transcription_demo.json  ward_advisory_flow.json  ward_blocking_flow.json  ward_comprehensive_flow.json  ward_retry_flow.json
windlass/migrations/: README.md  add_callouts_columns.sql  add_checkpoint_types.sql  add_model_requested_column.sql  add_prompt_lineage_table.sql  add_species_hash_column.sql  add_species_stats_view.sql  create_artifacts_table.sql  create_cascade_state_table.sql  create_context_cards_table.sql  create_research_sessions_table.sql
windlass/tackle/: narrator.json  (+6 more)
(+5477 files in other folders)
