[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lars"
version = "2.0.0"
description = "LARS: Declarative agent framework for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "chdb",
    "pypdf",
    "duckdb",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "pydantic",
    "rich",
    "jinja2",
    "altair",
    "vl-convert-python",
    "plotly",
    "kaleido",
    "miniaudio",
    "pillow",
    "gunicorn[gevent]",
    "jsonschema",
    "openpyxl",
    "readchar",  # For Hot or Not interactive rating UI
    "miniaudio",  # For ElevenLabs TTS audio playback
    "requests",  # For ElevenLabs API calls and Rabbitize REST API
    "ruamel.yaml",  # For YAML cascade/tool definition support
    "sqlglot",  # For SQL fingerprinting and UDF type extraction in SQL Trail
    ##"toon-format",  # Token-efficient data encoding for LLM contexts
    "toon-format @ git+https://github.com/toon-format/toon-python.git" # tool-python not fully released yet
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["lars"]

[tool.hatch.build.targets.sdist]
include = [
    "lars/**/*",
]

# Include starter files in the package
[tool.hatch.build.targets.wheel.force-include]
"lars/starter" = "lars/starter"

[project.optional-dependencies]
# Extra dependencies for specific features
browser = [
    # Pure Python browser automation (replaces Node.js rabbitize)
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",  # For HTTP client in tools
    # Note: numpy is already a transitive dependency
    # Note: pillow is already in main dependencies
    # After install, run: playwright install chromium
]
docker = [
    "docker",  # For linux_shell and run_code tools
]
local-models = [
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.34.0,<1.0",  # transformers 4.x requires <1.0
]
all = [
    "docker",
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.34.0,<1.0",  # transformers 4.x requires <1.0
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
lars = "lars.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
]
markers = [
    "requires_llm: marks tests that require LLM API access (OpenRouter)",
    "requires_clickhouse: marks tests that require ClickHouse database",
    "integration: marks integration tests that need external services",
]
# Default: run all tests except those requiring external services
# Use -m "not integration" to skip integration tests
# Use -m "" to run all tests
