[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "larsql"
version = "2.2.21"
description = "LARS: Declarative agent framework with first class SQL integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ryan Robitaille", email = "ryan.robitaille@gmail.com"}]
license = {text = "OSASSY"}
keywords = ["agents", "llm", "workflows", "declarative", "sql", "semantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm",
    "chdb",
    "pypdf",
    "duckdb",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "pydantic",
    "rich",
    "jinja2",
    "altair",
    "vl-convert-python",
    "plotly",
    "kaleido",
    "miniaudio",
    "pillow",
    "gunicorn[gevent]",
    "jsonschema",
    "openpyxl",
    "readchar",
    "requests",
    "ruamel.yaml",
    "sqlglot",
    "clickhouse-driver",
    "clickhouse-connect",
    "pandas",
    "flask",
    "flask-cors",
]

[project.urls]
Homepage = "https://github.com/ryrobes/larsql"
Repository = "https://github.com/ryrobes/larsql"
Documentation = "https://larsql.com/"

[tool.hatch.build.targets.wheel]
packages = ["lars"]

[tool.hatch.build.targets.sdist]
include = [
    "lars/**/*",
]

[project.optional-dependencies]
# Extra dependencies for specific features
browser = [
    # Pure Python browser automation (replaces Node.js rabbitize)
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",  # For HTTP client in tools
    # Note: numpy is already a transitive dependency
    # Note: pillow is already in main dependencies
    # After install, run: playwright install chromium
]
docker = [
    "docker",  # For linux_shell and run_code tools
]
local-models = [
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.34.0,<1.0",  # transformers 4.x requires <1.0
]
all = [
    "docker",
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.34.0,<1.0",  # transformers 4.x requires <1.0
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
lars = "lars.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
]
markers = [
    "requires_llm: marks tests that require LLM API access (OpenRouter)",
    "requires_clickhouse: marks tests that require ClickHouse database",
    "integration: marks integration tests that need external services",
]
# Default: run all tests except those requiring external services
# Use -m "not integration" to skip integration tests
# Use -m "" to run all tests
