[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windlass"
version = "0.1.0"
description = "A Declarative Wrapper for openai-agents-python with a nautical theme."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "chdb",
    "duckdb",  # Still used by smart_sql_run tool for agent queries
    "pandas",
    "pyarrow",
    "python-dotenv",
    "pydantic",
    "rich",
    "jinja2",
    "altair", 
    "vl-convert-python", 
    "plotly", 
    "kaleido",
    "miniaudio",
    "pillow",
    "jsonschema",
    "readchar",  # For Hot or Not interactive rating UI
    "miniaudio",  # For ElevenLabs TTS audio playback
    "requests",  # For ElevenLabs API calls
]

[project.scripts]
windlass = "windlass.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
]
